Bug 1947950 - Truncate long font names in Fonts panel using CSS. r=nchevobbe,devtools-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D259902

--- a/devtools/client/themes/fonts.css
+++ b/devtools/client/themes/fonts.css
@@ -167,6 +167,12 @@
   padding: 3px;
   margin-inline-start: -3px;
   border-radius: 3px;
+
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-height: calc(3lh + 3px);
+  -webkit-line-clamp: 3;
+  line-clamp: 3;
 }
 
 .font-name:hover {
